Added a first endpoint to expose 'navios horarios' and 'navio horario'

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "dependencies": {
-      "express": "^4.17.1",
-      "http": "^0.0.1-security",
-      "https": "^1.0.0",
-      "nodemon": "^2.0.15",
-      "request": "^2.88.2"
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "http": "^0.0.1-security",
+        "https": "^1.0.0",
+        "nodemon": "^2.0.15",
+        "request": "^2.88.2",
+        "xlsx": "^0.18.5"
     },
     "scripts": {
-      "start": "node app.js"
+        "start": "node app.js"
     }
-  }
-  
+}
