--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "body-parser": "^1.20.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "http": "^0.0.1-security",
